Nova implementação atualizada. Inserção de tabela para Procedimentos relacionadas com os Agendamentos. Separação de informações de preço duração do atendimento e descrição para o tipo de procedimento que será chamado no agendamento
