# backend/backend_app/schema_dto/appointment_update_schema_dto.py
@@ -1,15 +1,14 @@
 from marshmallow import Schema, fields, ValidationError, validates
 from datetime import date
 
-class AppointmentSchemaDTO(Schema):
+class AppointmentUpdateSchemaDTO(Schema):
+    pet_id = fields.Integer(required=False)
+    procedure_id = fields.Integer(required=False)
+    date_appoint = fields.Date(required=False)
     
-    id = fields.Int(dump_only=True)
-    pet_id = fields.Integer(required=True)
-    procedure_id = fields.Integer(required=True)
-    date_appoint = fields.Date(required=True)
-        
     @validates('date_appoint')
     def validate_date_appoint(self, value):
         today = date.today()   
         if value <= today: #  Data deve ser futura
             raise ValidationError("Data precisa ser maior ou igual a hoje")
+    
